# pytest-egg

./: LICENSE  README.md  pyproject.toml
pytest_egg/: __init__.py  arts.py  plugin.py
pytest_egg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_plugin.py
